--- a/simulation-one/package.json
+++ b/simulation-one/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.15.4",
     "massive": "^4.2.0",
     "react": "^15.6.1",
